# aws-assume-role

./: .gitignore  Cargo.toml  DEPLOYMENT.md  DEVELOPMENT.md  DISTRIBUTION.md  Dockerfile  GITHUB_PACKAGES.md  PREREQUISITES.md  PUBLISHING_GUIDE.md  README.md  RELEASE.md  RELEASE_CHECKLIST.md  RELEASE_GUIDE.md  build-releases.sh  dev-cli.sh  install.sh
.cargo/: config.toml
.github/workflows/: ci-cd.yml  publish-packages.yml  release.yml  test.yml
benches/: performance.rs
docs/: ARCHITECTURE.md  CONSOLIDATION_PLAN.md  DEPLOYMENT.md  DEVELOPER_WORKFLOW.md  README.md  RELEASE.md
memory-bank/: README.md  activeContext.md  development-context.md  development-setup.md  development-workflow.md  productContext.md  progress.md  project-context.md  projectbrief.md  security-upgrade.md  systemPatterns.md  techContext.md  technical-context.md  testing-framework.md
packaging/: README.md  build-packages.sh
packaging/apt/DEBIAN/: control  postinst  prerm
packaging/aur/: .SRCINFO  PKGBUILD
packaging/chocolatey/: aws-assume-role.nuspec
packaging/chocolatey/tools/: chocolateyinstall.ps1  chocolateyuninstall.ps1
packaging/homebrew/: aws-assume-role.rb
packaging/rpm/: aws-assume-role.spec
release-notes/: README.md  RELEASE_NOTES_v1.2.0.md  RELEASE_NOTES_v1.3.0.md  RELEASE_NOTES_v1.3.1.md  TEMPLATE.md
releases/: INSTALL.sh  README.md  UNINSTALL.sh  aws-assume-role-bash.sh
releases/multi-shell/: INSTALL.sh  QUICK_START_DEPLOYMENT.md  README.md  RELEASE_NOTES_v1.0.1.md  RELEASE_NOTES_v1.2.0.md  UNINSTALL.ps1  UNINSTALL.sh  aws-assume-role-bash.sh  aws-assume-role-fish.fish  create-distribution.sh
scripts/: build-releases.sh  create-release-notes.sh  install.sh  pre-commit-hook.sh  publish-to-package-managers.sh  release.sh  update-version.sh
src/: lib.rs  main.rs
src/aws/: mod.rs
src/cli/: mod.rs
src/config/: mod.rs
src/error/: mod.rs
tests/: integration_tests.rs  shell_integration_tests.rs
tests/common/: mod.rs
