[package]
name = "aws-assume-role"
version = "1.2.0"
edition = "2021"
authors = ["Hung, Nguyen Minh <holdennguyen6174@gmail.com>"]
description = "Simple CLI tool to easily switch between AWS IAM roles across different accounts"
documentation = "https://docs.rs/aws-assume-role"
readme = "README.md"
homepage = "https://github.com/holdennguyen/aws-assume-role"
repository = "https://github.com/holdennguyen/aws-assume-role"
license = "MIT"
keywords = ["aws", "cli", "iam", "role", "sso"]
categories = ["command-line-utilities", "authentication"]
exclude = [
    "releases/",
    "packaging/",
    "memory-bank/",
    "tests/",
    ".gitignore",
    "build-releases.sh",
    "install.sh",
    "DEPLOYMENT.md"
]

[[bin]]
name = "aws-assume-role"
path = "src/main.rs"

[lib]
name = "aws_assume_role"
path = "src/lib.rs"

[dependencies]
aws-config = { version = "1.8.0", features = ["behavior-version-latest"] }
aws-sdk-sts = "1.75.0"
aws-sdk-sso = "1.73.0"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
dirs = "5.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tempfile = "3.0"
assert_cmd = "2.0"
predicates = "3.0"
tokio-test = "0.4"
mock_instant = "0.3"
serial_test = "3.0"
env_logger = "0.10"
test-log = "0.2"
rstest = "0.18"
proptest = "1.0"
criterion = "0.5"
wiremock = "0.5"

# For benchmarking
[[bench]]
name = "performance"
harness = false
